# ContestWatchman

./: .gitignore  CHANGELOG.md  Cargo.toml  ContestWatchman.cabal  README.md  client_session_key.aes  dockerfile  make.nu  package.yaml  routes.yesodroutes  run.nu  stack.yaml
app/: Main.hs  Opts.hs
src/: Application.hs  Contest.hs  Foundation.hs  Home.hs  Model.hs  db.rs  main.rs  model.rs  remote.rs  server.rs
src/server/: cmdlet.rs  mod.rs  serve.rs
templates/: atom.template.xml
