[package]
name = "ContestWatchman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = "0.12.0"
clap = { version = "4.3.4", features = ["derive"] }
reqwest = "0.11.18"
rusqlite = { version = "0.29.0", features=["bundled"] }
serde = { version="1.0.164", features=["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.22", features = ["serde", "parsing", "formatting", "macros"] }
tokio = { version = "1.28.2", features=["full"] }
warp = "0.3.5"
